# DepGuard-Lite-Dependency-Risk-Report-CVEs-Licenses-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  depguard.example.yml  pyproject.toml
src/depguard/: __init__.py  cache.py  cli.py  license.py  models.py  osv.py  parse.py  report.py
tests/: test_license.py  test_osv.py  test_parse.py  test_report.py
tests/fixtures/: package.json  pyproject.toml  requirements.txt
